Add 14 timus tasks (timus)

--- a/timus/README
+++ b/timus/README
@@ -1,3 +1,17 @@
 Simple algorithmic problems from http://acm.timus.ru:
 
-1. a_plus_b --- calculate a + b
+Solved tasks: 14
+0 t1000
+1 t1001
+2 t1785
+3 t1293
+4 t2012
+5 t1409
+6 t1877
+7 t2001
+8 t1264
+9 t1787
+10 t1545
+11 t1496
+12 t1196
+13 t1837
